--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,59 @@
 @import "tailwindcss";
+
+:root {
+  --font-size: 16px;
+  --font-weight: 400;
+}
+
+body {
+  font-weight: var(--font-weight);
+}
+
+.text-xs,
+.text-sm,
+.text-base,
+.text-lg,
+.text-xl,
+.text-2xl,
+.text-3xl,
+.text-4xl,
+.text-5xl,
+.text-6xl,
+.text-7xl,
+.text-8xl,
+.text-9xl {
+  font-size: var(--font-size) !important;
+}
+.font-thin,
+.font-extralight,
+.font-light,
+.font-normal,
+.font-medium,
+.font-semibold,
+.font-bold,
+.font-extrabold,
+.font-black {
+  font-weight: var(--font-weight) !important;
+}
+
+.custom-font {
+  font-size: var(--font-size) !important;
+  font-weight: var(--font-weight) !important;
+}
+.ant-btn,
+.ant-typography {
+  font-size: var(--font-size) !important;
+  font-weight: var(--font-weight) !important;
+}
+
+.ant-form-item-label > label {
+  font-size: var(--font-size) !important;
+  font-weight: var(--font-weight) !important;
+}
+h3,
+h2,
+p,
+h1 {
+  font-size: var(--font-size) !important;
+  font-weight: var(--font-weight) !important;
+}
